# QEDBenchmark

./: CMakeLists.txt  README.md  TestCheck.py
FastQED_versions/: CMakeLists.txt  Fast_QED_v1_nocritical.h  TestCheck.py  compare_time.py  run_all.bat  run_all.sbatch
FastQED_versions/hichi/Core/include/: Ensemble.h  ParticleArray.h  macros.h
FastQED_versions/hichi/Particle/include/: Fast_QED.h  ParticleBoundaryCondition.h
FastQED_versions/par_v0_critical/: Fast_QED.h
FastQED_versions/par_v1_nocritical/: breit_wheeler.h
FastQED_versions/par_v2_1_reserve/: Fast_QED.h
FastQED_versions/par_v2_2_newvec/: Fast_QED.h
FastQED_versions/par_v2_4_myvec/: Fast_QED.h  compton.h
FastQED_versions/par_v2_5_my_ideal_vec/: Fast_QED.h  Particle.h
FastQED_versions/par_v2_6_copying_particles/: Fast_QED.h  Particle.h
FastQED_versions/par_v3_2_try_vectorize_one_loop/: Fast_QED.h  Particle.h
FastQED_versions/par_v3_3_try_vectorize_one_loop_pragma_simd/: Fast_QED.h  Vectors.h
FastQED_versions/par_v3_4_try_vectorize_many_small_loops/: Fast_QED.h  Particle.h  Vectors.h
FastQED_versions/par_v3_5_vectorized_combined_loops/: Fast_QED.h  Particle.h  Vectors.h
FastQED_versions/par_v4_vectorization_without_vector/: Fast_QED.h
FastQED_versions/par_v5_no_vectorization/: Fast_QED.h
FastQED_versions/par_v6_adapted_for_integration/: Fast_QED.h
FastQED_versions/par_v7_adapted_for_picador/: Fast_QED.h
FastQED_versions/par_v8_adapted_for_picador_simpler/: Fast_QED.h
FastQED_versions/src/: main.cpp
FastQED_versions/v_my/: CMakeLists.txt
FastQED_versions/v_my/par_v1_nocritical/: Fast_QED.h
FastQED_versions/v_my/par_v2_3_avoid_of_small_vectors/: Fast_QED.h
FastQED_versions/v_my/par_v2_4_myvec/: Fast_QED.h
FastQED_versions/v_my/par_v3_1_chunks/: Fast_QED.h
FastQED_versions/v_my/par_v3_2_try_vectorize_many_small_loops/: Fast_QED.h
FastQED_versions/v_my/par_v3_3_try_vectorize_one_loop/: Fast_QED.h  breit_wheeler.h
FastQED_versions/v_my/par_v_first_loop_iter/: Fast_QED.h
FastQED_versions/v_valentin/: main.cpp
benchmark/: main.cpp
hichi/Core/include/: AnalyticalField.h  Particle.h  macros.h
hichi/Particle/include/: Fast_QED.h  ParticleGenerator.h  QED_AEG.h  breit_wheeler.h
